--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <!-- CHANGE this path to your file if needed -->
       <a-assets timeout="60000">
-        <a-asset-item id="room" src="assets/asset3.glb"></a-asset-item>
+        <a-asset-item id="room" src="https://ykkuinkyvupwu9iy.public.blob.vercel-storage.com/asset3.glb"></a-asset-item>
       </a-assets>
 
       <!-- Lighting: simple + fast for headsets -->
