--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <!-- Assets: update path if you’re using the compressed file -->
       <a-assets timeout="60000">
-        <a-asset-item id="room" src="https://ykkuinkyvupwu9iy.public.blob.vercel-storage.com/asset3.glb"></a-asset-item>
+        <a-asset-item id="room" src="https://ykkuinkyvupwu9iy.public.blob.vercel-storage.com/se3.glb"></a-asset-item>
       </a-assets>
 
       <!-- Soft gradient sky dome (very cheap, nice lift) -->
