--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Store Walkthrough — shelf lighting</title>
+    <title>Store Walkthrough — shelf lighting + proper VR movement</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <!-- aframe-extras includes movement-controls + universal-controls -->
     <script src="https://unpkg.com/aframe-extras@7.7.0/dist/aframe-extras.min.js"></script>
     <style>html,body{margin:0;height:100%;background:#2f3033}</style>
   </head>
@@ -18,12 +19,12 @@
         <a-asset-item id="room" src="https://ykkuinkyvupwu9iy.public.blob.vercel-storage.com/se3.glb"></a-asset-item>
       </a-assets>
 
-      <!-- BASE LIGHTING (bright but soft) -->
-      <a-entity light="type: ambient; intensity: 1.15; color: #ffffff"></a-entity>
-      <a-entity light="type: hemisphere; skyColor: #ffffff; groundColor: #dcdcdc; intensity: 0.9" position="0 8 0"></a-entity>
-      <a-entity id="sun" light="type: directional; intensity: 0.9; castShadow: true" position="10 14 8"></a-entity>
+      <!-- BASE LIGHTING (toned down) -->
+      <a-entity light="type: ambient; intensity: 0.9; color: #ffffff"></a-entity>
+      <a-entity light="type: hemisphere; skyColor: #ffffff; groundColor: #dcdcdc; intensity: 0.6" position="0 8 0"></a-entity>
+      <a-entity id="sun" light="type: directional; intensity: 0.8; castShadow: true" position="10 14 8"></a-entity>
 
-      <!-- Floor (neutral, receives shadows) -->
+      <!-- Floor -->
       <a-plane rotation="-90 0 0" width="800" height="800"
                material="color:#cfd5dc; metalness:0.05; roughness:0.85"
                shadow="receive:true"></a-plane>
@@ -31,11 +32,14 @@
       <!-- Model -->
       <a-entity id="model" gltf-model="#room" shadow="cast:true; receive:true"></a-entity>
 
-      <!-- Camera rig -->
-      <a-entity id="rig" position="0.5 1.6 0.5" rotation="0 180 0"
-                movement-controls
+      <!-- Camera rig: NOW with universal-controls (thumbsticks) -->
+      <a-entity id="rig"
+                position="0.5 1.6 0.5"
+                rotation="0 180 0"
+                universal-controls
+                movement-controls="fly:false"
                 kinematic-body="radius:0.3; height:1.6; stepHeight:0.2">
-        <a-entity camera look-controls wasd-controls></a-entity>
+        <a-entity camera look-controls></a-entity>
       </a-entity>
 
       <!-- Safety cube (hidden after model loads) -->
@@ -47,23 +51,23 @@
       const model  = document.getElementById('model');
       const sanity = document.getElementById('sanity');
 
-      // Headset-friendly renderer + brighter exposure
+      // Slightly lower global brightness & headset-friendly DPR
       scene.addEventListener('loaded', () => {
         const r = scene.renderer;
         if (!r) return;
         r.toneMapping = THREE.ACESFilmicToneMapping;
-        r.toneMappingExposure = 2.0; // 1.9–2.2 range
+        r.toneMappingExposure = 1.6; // was ~2.0
         const isQuest = /Quest|Oculus/i.test(navigator.userAgent);
         r.setPixelRatio(isQuest ? 1.0 : Math.min(window.devicePixelRatio||1, 1.5));
       });
 
-      // ---- CONFIG: where to place shelf/aisle lights (edit these) ----
+      // ---- CONFIG for shelf/aisle lights (also toned down) ----
       const AISLE_Y_POINT = 2.2;     // height of point lights along shelves
       const AISLE_Y_SPOT  = 3.0;     // height of down-facing spotlights
       const LEFT_X  = -4.0;          // X for left shelf row
       const RIGHT_X =  4.0;          // X for right shelf row
       const CENTER_X = 0.0;          // X for middle aisle
-      const Z_START = -9.0, Z_END = 9.0, Z_STEPS = 5; // how many lights along depth
+      const Z_START = -9.0, Z_END = 9.0, Z_STEPS = 5;
 
       model.addEventListener('model-loaded', () => {
         const obj = model.getObject3D('mesh');
@@ -80,29 +84,29 @@
         const box2 = new THREE.Box3().setFromObject(obj);
         obj.position.y -= box2.min.y;
 
-        // Shadow quality
+        // Gentle shadows
         const sun = document.getElementById('sun').getObject3D('light');
         if (sun && sun.shadow){ sun.shadow.mapSize.set(2048,2048); sun.shadow.radius = 2; }
 
-        // Material safety: avoid super-dark rough metal, show backfaces
+        // Material safety
         obj.traverse(n => {
           if (!n.isMesh || !n.material) return;
           const m = n.material;
           if ('metalness' in m)  m.metalness  = Math.min(0.1, m.metalness || 0);
           if ('roughness' in m) m.roughness = Math.min(0.8, Math.max(0.3, m.roughness || 0.7));
-          if (m.emissive) { m.emissive.setRGB(0.05,0.05,0.05); m.emissiveIntensity = Math.max(0.8, m.emissiveIntensity||0.8); }
+          if (m.emissive) { m.emissive.setRGB(0.04,0.04,0.04); m.emissiveIntensity = Math.max(0.7, m.emissiveIntensity||0.7); }
           m.side = THREE.DoubleSide;
           m.needsUpdate = true;
         });
 
-        // Build aisle lights
-        const addPoint = (x,y,z,intensity=2.2, distance=12, decay=2) => {
+        // Build aisle lights (reduced intensities)
+        const addPoint = (x,y,z,intensity=1.8, distance=12, decay=2) => {
           const el = document.createElement('a-entity');
           el.setAttribute('position', `${x} ${y} ${z}`);
           el.setAttribute('light', `type: point; intensity: ${intensity}; distance: ${distance}; decay: ${decay}; color: #ffffff`);
           scene.appendChild(el);
         };
-        const addSpot = (x,y,z,intensity=1.4, angle=60, penumbra=0.5, distance=14) => {
+        const addSpot = (x,y,z,intensity=1.1, angle=55, penumbra=0.45, distance=14) => {
           const el = document.createElement('a-entity');
           el.setAttribute('position', `${x} ${y} ${z}`);
           el.setAttribute('rotation', `-90 0 0`);
@@ -113,15 +117,13 @@
         const step = (Z_END - Z_START) / (Z_STEPS - 1);
         for (let i=0;i<Z_STEPS;i++){
           const z = Z_START + i*step;
-          // point lights hugging left & right shelves
           addPoint(LEFT_X,  AISLE_Y_POINT, z);
           addPoint(RIGHT_X, AISLE_Y_POINT, z);
-          // soft spotlights down the center aisle
           addSpot(CENTER_X, AISLE_Y_SPOT, z);
         }
 
         sanity.setAttribute('visible', 'false');
-        console.log('Model ready + shelf lights placed.');
+        console.log('Model ready; lights + VR thumbsticks enabled.');
       });
 
       model.addEventListener('model-error', e => {
